--- a/index.html
+++ b/index.html
@@ -1,75 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
 
-    <title>Big Feelings</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
 
-    <!-- Linked CSS file -->
-    <link rel="stylesheet" href="styles/style.css" />
+  <title>Big Feelings</title>
 
-    <!-- Linked FavIcon -->
-    <link
-      rel="shortcut icon"
-      href="resources/feedback.png"
-      type="image/x-icon"
-    />
-  </head>
+  <!-- Linked CSS file -->
+  <link rel="stylesheet" href="styles/style.css" />
 
-  <body>
-    <!-- Header Section (Navigation) -->
-    <header>
-      <ul id="nav-bar">
-        <li><a class="link" href="index.html">Home</a></li>
-        <li><a class="link" href="pages/game.html">Game</a></li>
-        <li><a class="link" href="pages/achievement.html">Achievement</a></li>
-        <li><a class="link" href="pages/emotion.html">Emotion</a></li>
-      </ul>
-    </header>
+  <!-- Linked FavIcon -->
+  <link rel="shortcut icon" href="resources/feedback.png" type="image/x-icon" />
+</head>
 
-    <!-- Main Section (Game) -->
-    <main>
-      <!-- Game Image -->
-      <section id="game-image">
-        <img src="resources/Big Feelings.svg" alt="" />
+<body>
+  <!-- Header Section (Navigation) -->
+  <header>
+    <ul id="nav-bar">
+      <li><a class="link" href="index.html">Home</a></li>
+      <li><a class="link" href="pages/game.html">Game</a></li>
+      <li><a class="link" href="pages/achievement.html">Achievement</a></li>
+      <li><a class="link" href="pages/emotion.html">Emotion</a></li>
+    </ul>
+  </header>
+
+  <!-- Main Section (Game) -->
+  <main>
+    <!-- Game Image -->
+    <section id="game-image">
+      <img src="resources/Big Feelings.svg" alt="" />
+    </section>
+    <section id="banner">
+      <section id="play-btn-container">
+        <button id="play-btn"><a href="pages/game.html">Play</a></button>
       </section>
-      <section id="banner">
-        <section id="play-btn-container">
-          <button id="play-btn"><a href="pages/game.html">Play</a></button>
-        </section>
-      </section>
+    </section>
 
-      <!-- Game Name -->
-      <section id="game-information">
-        <h2>Big Feelings</h2>
-        <p>
-          Welcome to a vibrant and emotionally immersive adventure in "Big
-          Feelings," a game that explores the complexities of emotions in a
-          whimsical and enchanting world. Step into a breathtaking realm where
-          emotions come to life, and your journey revolves around understanding,
-          managing, and embracing an array of feelings.
-        </p>
-      </section>
-    </main>
+    <!-- Game Name -->
+    <section id="game-information">
+      <h2>Big Feelings</h2>
+      <p>
+        Welcome to a vibrant and emotionally immersive adventure in "Big
+        Feelings," a game that explores the complexities of emotions in a
+        whimsical and enchanting world. Step into a breathtaking realm where
+        emotions come to life, and your journey revolves around understanding,
+        managing, and embracing an array of feelings.
+      </p>
+    </section>
+  </main>
 
-    <!-- Footer Section (Terms and Cookies) -->
-    <footer id="footer" class="absolue bottom-0 right-0 left-0">
-      <ul>
-        <li><a class="link" href="">Terms and Conditions</a></li>
-        <li><a class="link" href="">Cookie Policy</a></li>
-        <li><a class="link" href="">Accessibility</a></li>
-        <li><a class="link" href="">Privacy Policy</a></li>
-        <li><a class="link" href="">Copyright</a></li>
-      </ul>
-      <p>Copyright - @student</p>
-    </footer>
+  <!-- Footer Section (Terms and Cookies) -->
+  <footer id="footer" class="absolue bottom-0 right-0 left-0">
+    <ul>
+      <li><a class="link" href="">Terms and Conditions</a></li>
+      <li><a class="link" href="">Cookie Policy</a></li>
+      <li><a class="link" href="">Accessibility</a></li>
+      <li><a class="link" href="">Privacy Policy</a></li>
+      <li><a class="link" href="">Copyright</a></li>
+    </ul>
+    <p>Copyright - @student</p>
+  </footer>
 
-    <!-- Scripts -->
-    <script src="scripts/play-btn.js"></script>
-  </body>
+  <!-- Scripts -->
+  <script src="scripts/play-btn.js"></script>
+</body>
+
 </html>
