--- a/pages/game.html
+++ b/pages/game.html
@@ -1,85 +1,76 @@
 <!DOCTYPE html>
 <html lang="en" class="bg-white">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Big Feelings | Game</title>
 
-    <!-- Linked CSS file -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="../styles/style.css" />
-    <link rel="stylesheet" href="../styles/Game/game.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Big Feelings | Game</title>
 
-    <!-- Linked FavIcon -->
-    <link
-      rel="shortcut icon"
-      href="../resources/feedback.png"
-      type="image/x-icon"
-    />
-  </head>
-  <body class="bg-white">
-    <!-- Header Section (Navigation) -->
-    <header>
-      <ul id="nav-bar">
-        <li><a class="link" href="../index.html">Home</a></li>
-        <li><a class="link" href="../pages/game.html">Game</a></li>
-        <li>
-          <a class="link" href="../pages/achievement.html">Achievement</a>
-        </li>
-        <li><a class="link" href="../pages/emotion.html">Emotion</a></li>
-      </ul>
-    </header>
+  <!-- Linked CSS file -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@2.6.0/dist/full.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="../styles/Game/game.css" />
 
-    <!-- Main Section (Big Feelings Game) -->
-    <main>
-      <div id="main-container flex flex-col">
-        <!-- Background Video of the Game Start -->
-        <div class="bg-video">
-          <video id="bg-video" autoplay muted loop>
-            <source src="../resources/bg-video.mp4" type="video/mp4" />
-          </video>
-          <nav class="game-navigation">
-            <ul class="game-menu">
-              <li>
-                <details class="dropdown">
-                  <summary class="m-1 btn border-none">Play</summary>
-                  <ul
-                    class="p-2 shadow menu dropdown-content z-[1] bg-base-100 rounded-box w-fit"
-                  >
-                    <li><a href="../pages/quiz-play.html">Quiz Game</a></li>
-                    <li>
-                      <a href="../pages/dragndrop-play.html"
-                        >Drag & Drop Game</a
-                      >
-                    </li>
-                  </ul>
-                </details>
-              </li>
-              <li><a href="../pages/achievement.html">Acheivement</a></li>
-              <li><a href="../pages/emotion.html">Learn</a></li>
-              <li><a href="../index.html">Quit</a></li>
-            </ul>
-          </nav>
-        </div>
+  <!-- Linked FavIcon -->
+  <link rel="shortcut icon" href="../resources/feedback.png" type="image/x-icon" />
+</head>
+
+<body class="bg-white">
+  <!-- Header Section (Navigation) -->
+  <header>
+    <ul id="nav-bar">
+      <li><a class="link" href="../index.html">Home</a></li>
+      <li><a class="link" href="../pages/game.html">Game</a></li>
+      <li>
+        <a class="link" href="../pages/achievement.html">Achievement</a>
+      </li>
+      <li><a class="link" href="../pages/emotion.html">Emotion</a></li>
+    </ul>
+  </header>
+
+  <!-- Main Section (Big Feelings Game) -->
+  <main>
+    <div id="main-container flex flex-col">
+      <!-- Background Video of the Game Start -->
+      <div class="bg-video">
+        <video id="bg-video" autoplay muted loop>
+          <source src="../resources/bg-video.mp4" type="video/mp4" />
+        </video>
+        <nav class="game-navigation">
+          <ul class="game-menu flex flex-wrap">
+            <li>
+              <details class="dropdown">
+                <summary class="m-1 btn border-none">Play</summary>
+                <ul class="p-2 shadow menu dropdown-content z-[1] bg-base-100 rounded-box w-fit">
+                  <li><a href="../pages/quiz-play.html">Quiz Game</a></li>
+                  <li>
+                    <a href="../pages/dragndrop-play.html">Drag & Drop Game</a>
+                  </li>
+                </ul>
+              </details>
+            </li>
+            <li><a href="../pages/achievement.html">Acheivement</a></li>
+            <li><a href="../pages/emotion.html">Learn</a></li>
+            <li><a href="../index.html">Quit</a></li>
+          </ul>
+        </nav>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <!-- Footer Section (Terms and Cookies) -->
-    <footer id="footer" class="absolue bottom-0 right-0 left-0">
-      <ul>
-        <li><a class="link" href="">Terms and Conditions</a></li>
-        <li><a class="link" href="">Cookie Policy</a></li>
-        <li><a class="link" href="">Accessibility</a></li>
-        <li><a class="link" href="">Privacy Policy</a></li>
-        <li><a class="link" href="">Copyright</a></li>
-      </ul>
-      <p>Copyright - @student</p>
-    </footer>
-    <script src="../scripts/gamePage.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </body>
+  <!-- Footer Section (Terms and Cookies) -->
+  <footer id="footer" class="absolue bottom-0 right-0 left-0">
+    <ul>
+      <li><a class="link" href="">Terms and Conditions</a></li>
+      <li><a class="link" href="">Cookie Policy</a></li>
+      <li><a class="link" href="">Accessibility</a></li>
+      <li><a class="link" href="">Privacy Policy</a></li>
+      <li><a class="link" href="">Copyright</a></li>
+    </ul>
+    <p>Copyright - @student</p>
+  </footer>
+  <script src="../scripts/gamePage.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+</body>
+
 </html>
