done and dusted

--- a/pages/dragndrop-play.html
+++ b/pages/dragndrop-play.html
@@ -35,7 +35,8 @@
             id="dropzone-container">
           <!-- Dropzone containers will be added dynamically -->
         </div>
-        <div class="emotion-container w-full md:w-1/2 flex justify-center items-center" id="emotion-images">
+        <div class="emotion-container w-full md:w-1/2 flex flex-wrap gap-3 justify-center items-center"
+            id="emotion-images">
           <!-- Emotion images will be added dynamically -->
         </div>
       </div>
