--- a/pages/game.html
+++ b/pages/game.html
@@ -49,7 +49,7 @@
                 </ul>
               </details>
             </li>
-            <li><a href="../pages/achievement.html">Acheivement</a></li>
+            <li><a href="../pages/achievement.html">Achievement</a></li>
             <li><a href="../pages/emotion.html">Learn</a></li>
             <li><a href="../index.html">Quit</a></li>
           </ul>
